@@ -2,9 +2,17 @@ package org.openmrs.module.epts.etl.conf;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -147,7 +155,8 @@ public class EtlTemplateConfiguration {
 			allowedParams = new HashSet<>();
 		}
 
-		List<String> missingParams = allowedParams.stream().filter(p -> !inputParams.containsKey(p)).toList();
+		List<String> missingParams = allowedParams.stream().filter(p -> !inputParams.containsKey(p))
+				.collect(java.util.stream.Collectors.toList());
 
 		if (!missingParams.isEmpty()) {
 			String childMsg = templateInfo.getChildTemplate() != null
@@ -168,7 +177,8 @@ public class EtlTemplateConfiguration {
 		Set<String> allowedSet = this.getParameters() != null ? new HashSet<>(this.getParameters())
 				: Collections.emptySet();
 
-		List<String> unknownParams = inputParams.keySet().stream().filter(key -> !allowedSet.contains(key)).toList();
+		List<String> unknownParams = inputParams.keySet().stream().filter(key -> !allowedSet.contains(key))
+				.collect(java.util.stream.Collectors.toList());
 
 		if (!unknownParams.isEmpty()) {
 			String childMsg = templateInfo.getChildTemplate() != null
@@ -182,7 +192,7 @@ public class EtlTemplateConfiguration {
 
 	public static EtlTemplateConfiguration findTemplate(EtlConfiguration relatedEtlConf, String templateName) {
 
-		String templatesFileLocation = relatedEtlConf.getEtlTemplatesFilePath();
+		String templatesFileLocation = relatedEtlConf.getTemplatesDir();
 
 		if (templatesFileLocation == null || templatesFileLocation.isBlank()) {
 			throw new EtlExceptionImpl("Templates file path is not defined.");
@@ -192,19 +202,109 @@ public class EtlTemplateConfiguration {
 			throw new EtlExceptionImpl("Missing template name in one or more template invocation.");
 		}
 
-		List<EtlTemplateConfiguration> templates = CACHE.computeIfAbsent(templatesFileLocation, path -> {
+		String cacheKey = relatedEtlConf.getEtlConfDir() + "|" + templatesFileLocation;
+
+		List<EtlTemplateConfiguration> templates = CACHE.computeIfAbsent(cacheKey, path -> {
 			try {
 				ObjectMapper mapper = new ObjectMapperProvider().getContext(EtlTemplateConfiguration.class);
-				return mapper.readValue(new File(path),
-						mapper.getTypeFactory().constructCollectionType(List.class, EtlTemplateConfiguration.class));
+				List<EtlTemplateConfiguration> result = new ArrayList<>();
+
+				for (File file : resolveFiles(relatedEtlConf.getEtlConfDir(), templatesFileLocation)) {
+					JsonNode content = mapper.readTree(file);
+
+					if (content.isArray()) {
+						result.addAll(mapper.convertValue(content, mapper.getTypeFactory()
+								.constructCollectionType(List.class, EtlTemplateConfiguration.class)));
+					} else {
+						result.add(mapper.treeToValue(content, EtlTemplateConfiguration.class));
+					}
+				}
+
+				validateUniqueTemplateNames(result, templatesFileLocation);
+
+				return result;
 			} catch (IOException e) {
-				throw new EtlExceptionImpl("Error reading templates file: " + path, e);
+				throw new EtlExceptionImpl("Error reading templates path: " + templatesFileLocation, e);
 			}
 		});
 
 		return templates.stream().filter(t -> templateName.equals(t.getName())).findFirst()
 				.orElseThrow(() -> new EtlExceptionImpl(
-						"Template not found: " + templateName + " in file: " + templatesFileLocation));
+						"Template not found: " + templateName + " in path: " + templatesFileLocation));
+	}
+
+	private static void validateUniqueTemplateNames(List<EtlTemplateConfiguration> templates, String path) {
+		Set<String> names = new HashSet<>();
+		Set<String> duplicatedNames = new LinkedHashSet<>();
+
+		for (EtlTemplateConfiguration template : templates) {
+			if (!names.add(template.getName())) {
+				duplicatedNames.add(template.getName());
+			}
+		}
+
+		if (!duplicatedNames.isEmpty()) {
+			throw new EtlExceptionImpl(
+					"Duplicated template names " + duplicatedNames + " in templates path: " + path);
+		}
+	}
+
+	private static List<File> resolveFiles(String confRootDir, String path) throws IOException {
+		if (confRootDir == null || confRootDir.isBlank()) {
+			throw new EtlExceptionImpl("The confRootDir was not specified!");
+		}
+
+		Path rootPath = Paths.get(confRootDir).normalize();
+
+		if (path.contains("*")) {
+			int lastSeparator = Math.max(path.lastIndexOf('/'), path.lastIndexOf('\\'));
+			String parentPart = lastSeparator >= 0 ? path.substring(0, lastSeparator) : "";
+			String pattern = lastSeparator >= 0 ? path.substring(lastSeparator + 1) : path;
+			Path parentDir = parentPart.isEmpty() ? rootPath : rootPath.resolve(parentPart).normalize();
+
+			validatePathWithinRoot(rootPath, parentDir, path);
+
+			if (!Files.exists(parentDir) || !Files.isDirectory(parentDir)) {
+				throw new EtlExceptionImpl("Templates directory not found: " + parentDir);
+			}
+
+			List<File> files = new ArrayList<>();
+			try (DirectoryStream<Path> stream = Files.newDirectoryStream(parentDir, pattern)) {
+				for (Path item : stream) {
+					if (Files.isRegularFile(item)) {
+						files.add(item.toFile());
+					}
+				}
+			}
+			files.sort(Comparator.comparing(File::getName));
+			return files;
+		}
+
+		Path resolvedPath = rootPath.resolve(path).normalize();
+		validatePathWithinRoot(rootPath, resolvedPath, path);
+		File file = resolvedPath.toFile();
+
+		if (file.exists() && file.isDirectory()) {
+			File[] files = file.listFiles((dir, name) -> name.toLowerCase().endsWith(".json"));
+			if (files == null) {
+				return new ArrayList<>();
+			}
+			List<File> result = new ArrayList<>(Arrays.asList(files));
+			result.sort(Comparator.comparing(File::getName));
+			return result;
+		}
+
+		if (file.exists() && file.isFile()) {
+			return Collections.singletonList(file);
+		}
+
+		throw new EtlExceptionImpl("Templates path not found: " + resolvedPath);
+	}
+
+	private static void validatePathWithinRoot(Path rootPath, Path resolvedPath, String path) {
+		if (!resolvedPath.startsWith(rootPath)) {
+			throw new EtlExceptionImpl("Invalid templates path outside configuration root: " + path);
+		}
 	}
 
 	@Override
